Changelog
==========================

1.1.13 (unreleased)
-------------------

- Nothing changed yet.


1.1.12 (2009-10-18)
-------------------

-translate the contents of the author field - workaround since the field is language-independent (thomasw)

1.1.11 (2009-10-14)
-------------------

- rerelease. There was a mistake where parts of the package did not get into the egg

1.1.10 (2009-10-13)
-------------------

- fixed an inconsistency in the related publications where language indepentent was not used (pilz)
- replaced all occurences of i18n:translate in the publication_view template 
  with a call to a method on the view that uses MessageFactory. I couldn't figure
  out why i18n:translate worked for some langs, and not for others such as NL (thomasw)



1.1.9 (2009-10-06)
------------------
- Chapter links now always point to the url. Normally, if you click on a link
  and you have edit rights, you would go to the link view and not to the link 
  target. Since we already offer a second edit link, when somebody has edit 
  rights, the regular link can point directly to the place the link points to. 
  (gerken)

- Refactored the Chapter Update functionality. It is not a method any longer
  but a class. That way one can modify the behaviour without the need to
  copy the complete functionality (gerken)

1.1.8 (2009-09-30)
------------------
- Hide the JS-scanner induced PDF icon from the Related publications list on the publication's view (jcbrand)

1.1.7 (2009-09-15)
------------------
- Add try,except to decouple from Products.LinguaPlone (jcbrand)
- don't display a JS-scanner--induced PDF-icon in front of the publication's title (thomasw)

1.1.6 (2009-08-26)
------------------

- Add remove_additionals event handler in adapter/events.py and register it via zcml for IObjectRemovedEvent (jcbrand)
- Edited the object_added event: removed the code that sets translation
  references, it has been superseded by slc.autotranslate. (jcbrand)